syntax = "proto3";

package com.android.server.healthconnect.proto.backuprestore;

option java_multiple_files = true;

message Settings {
  map<int32, PrioritizedAppIds> priority_list = 1;
  optional ExportSettingsProto export_settings = 2;
  AutoDeleteFrequencyProto auto_delete_frequency = 3;
  EnergyUnitProto energy_unit_setting = 4;
  TemperatureUnitProto temperature_unit_setting = 5;
  HeightUnitProto height_unit_setting = 6;
  WeightUnitProto weight_unit_setting = 7;
  DistanceUnitProto distance_unit_setting = 8;
  map<string, AppInfo> app_info = 9;

  message PrioritizedAppIds {
    repeated int64 app_id = 1;
  }

  message AppInfo {
    optional string app_name = 1;
  }

  message ExportSettingsProto {
    int32 frequency = 1;
    string uri = 2;
  }

  enum AutoDeleteFrequencyProto {
    AUTO_DELETE_RANGE_UNSPECIFIED = 0;
    AUTO_DELETE_RANGE_NEVER = 1;
    AUTO_DELETE_RANGE_THREE_MONTHS = 2;
    AUTO_DELETE_RANGE_EIGHTEEN_MONTHS = 3;
  }

  enum EnergyUnitProto {
    ENERGY_UNIT_UNSPECIFIED = 0;
    CALORIE = 1;
    KILOJOULE = 2;
  }

  enum TemperatureUnitProto {
    TEMPERATURE_UNIT_UNSPECIFIED = 0;
    CELSIUS = 1;
    FAHRENHEIT = 2;
    KELVIN = 3;
  }

  enum HeightUnitProto {
    HEIGHT_UNIT_UNSPECIFIED = 0;
    CENTIMETERS = 1;
    FEET = 2;
  }

  enum WeightUnitProto {
    WEIGHT_UNIT_UNSPECIFIED = 0;
    POUND = 1;
    KILOGRAM = 2;
    STONE = 3;
  }

  enum DistanceUnitProto {
    DISTANCE_UNIT_UNSPECIFIED = 0;
    KILOMETERS = 1;
    MILES = 2;
  }
}